fixed input textbox within channelentry to fit in the entry box container as it was not fitting the width. also took away sidebar styling to add styling manually through css

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,9 @@
   overflow: scroll initial;
   flex-direction: row;
 }
+.sideBarContainer {
+  display: flex;
+}
 #loginBackground {
   height: 100vh;
   background: #9370DB;
@@ -42,28 +45,41 @@
   flex: 1;
 }
 .entryBorder {
-  /* display: flex;
-  position: absolute; */
-  /* border: 1px solid black; */
-  /* left: 270px;
+  display: flex;
+  position: relative;
+  /*border: 1px solid black;
+  left: 270px;
   height: 1000px;
   bottom: 1px;
-  width: 1700px; */
-  overflow-y:scroll;
-  overflow-x: hidden;
-  /* flex-direction: column;
-  align-items: flex-start; */
+  width: 1700px;  */
+  /* overflow-y:scroll;
+  overflow-x: hidden; */
+  overflow-y: scroll;
+  flex-direction: column;
+  align-items: flex-start;
+  border: 1px solid black;
+  height: 100vh;
+  width: 150vh;
+  
 }
+
 .channelEntryList {
   list-style: none;
   width: 100%;
   font-family: "Lucida Console", "Courier New", monospace ;
   font-size: 23px;
+  height: 100%;
   
 }
 .channelEntryText :hover {
     background-color: gray;
   
+}
+.channelEntryText {
+  display: flex;
+  width: 100%;
+  border: 1px solid black;
+
 }
 .channelEntryUser {
   font-weight: 700;
@@ -92,11 +108,19 @@
   height: 50px;
   margin-left: 20px;
 }
-.channelEntryInput {
-  position: sticky;
-  bottom: 0;
-  flex-direction: row;
+.inputWrapper {
+  display: flex;
+  
+  width: 100%;
 }
-.friendBox {
+.channelEntryInput {
+  position: fixed;
+  bottom: 0;
+  position: -webkit-sticky;
+  width: 150vh;
   z-index: 2;
 }
+
+/* .friendBox {
+  z-index: 2;
+} */
